0032200: Visualization, TKOpenGl - unify Phong/PBR light space calculations

Graphic3d_ShaderManager - Phong shading now uses World space calculations.
OpenGl_ShaderManager::pushLightSourceState() - fixed unnormalized direction of headlight source.